adiciona registros no logbook

--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -48,23 +48,73 @@ landscape,
 
  \begin{table}[]
 \centering
-\begin{tabular}{|l|l|l|l|l|}
+\begin{tabular}{|p{5cm}|l|l|l|p{8cm}|}
 \hline
 Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
-                  &                            &                &                 &                                  \\ \hline
+Ideias de perguntas para pesquisa de campo        & 13/08/2025 & 13/08/2025 & Todos   & Brainstorming de perguntas para entrevistas com usuários. \\ \hline
+Revisão das perguntas da pesquisa de campo        & 13/08/2025 & 13/08/2025 & Todos   & Revisão e refinamento das perguntas geradas no brainstorming. \\ \hline
+Definição das tarefas de cada um                  & 19/08/2025 & 19/08/2025 & Todos   & Distribuição das tarefas entre os membros da equipe com base nas perguntas definidas. \\ \hline
+Estudo sobre bibliotecas e sistemas de eye tracking existentes & 18/08/2025 & 26/08/2025 & Diego   & Pesquisa e análise de bibliotecas e sistemas de eye tracking disponíveis no mercado. \\ \hline
+Estudo da biblioteca WebGazer.js & 26/08/2025 & 26/08/2025 & Diego   & Estudo detalhado da biblioteca WebGazer.js para possível utilização no projeto. \\ \hline
+Desenvolvimento de testes com a biblioteca WebGazer.js & 26/08/2025 & 05/09/2025 & Diego   & Desenvolvimento de testes práticos utilizando a biblioteca WebGazer.js para avaliar sua funcionalidade. \\ \hline
+Adição da pesquisa de campo no template           & 27/08/2025 & 27/08/2025 & Giovana & Inclusão das perguntas definidas no template de pesquisa de campo. \\ \hline
+Revisão do diagrama de classes e de objetos       & 29/08/2025 & 29/08/2025 & Giovana & Revisão e atualização dos diagramas de classes e de objetos com base nas novas informações coletadas. \\ \hline
+Conversão do artigo para LaTeX                    & 04/09/2025 & 04/09/2025 & Arthur  & Conversão do artigo para o formato LaTeX. \\ \hline
+Submissão do artigo para correção                 & 04/09/2025 & 04/09/2025 & Arthur  & Submissão do artigo para o processo de correção. \\ \hline
+Tratamento das coordenadas do jogador no backend  & 06/09/2025 & 14/09/2025 & Giovana & Tratamento das coordenadas do jogador no backend. \\ \hline
+Reformulação das perguntas da pesquisa de campo   & 11/09/2025 & 11/09/2025 & Giovana & Reformulação das perguntas da pesquisa de campo com base no feedback recebido. \\ \hline
+\end{tabular}
+\end{table}
+
+\break
+
+ \begin{table}[]
+\centering
+\begin{tabular}{|p{5cm}|l|l|l|p{8cm}|}
+\hline
+Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
+Criação do briefing                               & 15/09/2025 & 15/09/2025 & Amanda  & Criação do briefing para alinhamento das expectativas do projeto. \\ \hline
+Vetorização da fase 2 do jogo                     & 16/09/2025 & 18/09/2025 & Igor  & Vetorização dos elementos gráficos da fase 2 do jogo. \\ \hline
+Criação das personas                              & 18/09/2025 & 18/09/2025 & Amanda  & Criação de personas para guiar o desenvolvimento do projeto. \\ \hline
+Aplicação do vetor na fase 2 do jogo                  & 20/09/2025 & 20/09/2025 & Igor  & Aplicação dos vetores criados na fase 2 do jogo. \\ \hline
+Escrita e correção dos objetivos do artigo        & 06/10/2025 & 08/10/2025 & Giovana & Escrita e correção dos objetivos do artigo com base no feedback recebido. \\ \hline
+Escrita e correção das metodologias do artigo     & 06/10/2025 &            & Giovana & Escrita e correção das metodologias do artigo com base no feedback recebido. \\ \hline
+Desenvolvimento do front-end da calibração        & 10/10/2025 & 10/10/2025 & Amanda  & Desenvolvimento do front-end da calibração. \\ \hline
+Reunião de alinhamento                            & 16/10/2025  & 16/10/2025 & Todos   & Reunião para alinhamento das atividades e definição de próximos passos. \\ \hline
+Reunião com o orientador do artigo                & 16/10/2025  & 16/10/2025 & Todos   & Reunião com o orientador do artigo para discutir o progresso e receber feedback. \\ \hline
+Criação do sitemap & 17/10/2025 & 21/10/2025 & Diego   & Criação do sitemap para o projeto. \\ \hline
+Desenvolvimento do front-end da fase 2 do jogo    & 18/10/2025  & 18/10/2025 & Amanda   & Desenvolvimento do front-end da fase 2 do jogo. \\ \hline
+Criação do design da fase 3 do jogo               & 19/10/2025  & 20/10/2025 & Amanda   & Criação do design da fase 3 do jogo. \\ \hline
+Correção da funcionalidade de configuração do volume & 19/10/2025  & 19/10/2025 & Amanda   & Correção da funcionalidade de configuração do volume no jogo. \\ \hline
+Adição de tutorial da fase                         & 19/10/2025  & 19/10/2025 & Amanda   & Adição de tutorial das fases do jogo. \\ \hline
+Implementação da biblioteca no projeto & 19/10/2025 & 19/10/2025 & Diego   & Implementação da biblioteca WebGazer.js no projeto. \\ \hline
+\end{tabular}
+\end{table}
+
+\break
+
+ \begin{table}[]
+\centering
+\begin{tabular}{|p{5cm}|l|l|l|p{8cm}|}
+\hline
+Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
+Alinhamento sobre o projeto                        & 20/10/2025  & 20/10/2025 & Todos   & Alinhamento sobre o projeto e definição de próximos passos. \\ \hline
+Documentação dos artefatos do projeto             & 20/10/2025  &            & Giovana   & Documentação dos artefatos do projeto para registro e referência futura. \\ \hline
+Correções do artigo                                & 20/10/2025  & 20/10/2025 & Arthur   & Realização das correções do artigo com base no feedback recebido. \\ \hline
+Revisão do diagrama de redes                       & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do diagrama de redes para garantir precisão e clareza. \\ \hline
+Revisão do CANVAS                                 & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do CANVAS para assegurar que todos os aspectos do projeto estão cobertos. \\ \hline
+Desenvolvimento da fase 3 do jogo                 & 20/10/2025  & 20/10/2025 & Amanda   & Desenvolvimento da fase 3 do jogo. \\ \hline
+Organização do design no figma                    & 20/10/2025  & 20/10/2025 & Amanda   & Organização para facilitar o acesso e a colaboração. \\ \hline
+Integração back e front-end                       & 20/10/2025  & 26/10/2025 & Diego   & Integração do back-end e front-end do projeto para garantir funcionalidade completa. \\ \hline
+Introdução do artigo                               & 20/10/2025 & 25/10/2025 & Arthur   & Escrita da introdução do artigo. \\ \hline
+Edição do pitch do projeto                          & 20/10/2025 & 26/10/2025 & Igor   & Edição do pitch do projeto para apresentação. \\ \hline
+Correções da analise Swot                         & 23/10/2025 & 23/10/2025 & Igor   & Realização das correções da análise SWOT com base no feedback recebido. \\ \hline
+Revisão da metodologia                             & 25/10/2025 & 25/10/2025 & Arthur   & Revisão da metodologia do artigo. \\ \hline
+Ajuste da lógica da fase 1                         & 25/10/2025 & 25/10/2025 & Giovana   & Ajuste da lógica da fase 1 do jogo. \\ \hline
+Pesquisa de bibliotecas para animação & 25/10/2025 & 25/10/2025 & Igor   & Início da pesquisa de bibliotecas para animação dos elementos gráficos do jogo. \\ \hline
+Ajuste da lógica da fase 2                         & 26/10/2025 & 26/10/2025 & Giovana   & Ajuste da lógica da fase 2 do jogo. \\ \hline
+Ajustes das telas finais e de feedback no figma    & 26/10/2025 & 26/10/2025 & Amanda   & Ajustes das telas finais e de feedback no Figma. \\ \hline
+Inclusão de registros no template do Logbook & 26/10/2025 &       & Amanda   & Início da inclusão de registros no template do Logbook para documentar o progresso do projeto. \\ \hline
 \end{tabular}
 \end{table}
 
