--- a/f299-template-pi-artifacts/fatec-template.tex
+++ b/f299-template-pi-artifacts/fatec-template.tex
@@ -114,7 +114,11 @@
 \section*{Análise SWOT}
     \addcontentsline{toc}{section}{Análise SWOT}
 
-    Esse é um exemplo de diagrama de redes, você deverá descrever todos os componentes presentes no diagrama (atores e funcionalidades do sistema).
+Nos pontos fortes, destaca-se o domínio da equipe sobre as tecnologias empregadas, o que garante eficiência no desenvolvimento e confiabilidade nos resultados. O sistema apresenta valor prático ao auxiliar no pré-diagnóstico do Déficit de Atenção, além da integração com o rastreamento ocular, que amplia a precisão da análise comportamental. Esses fatores reforçam a relevância científica e tecnológica da solução.
+
+Nos pontos fracos, observa-se que a principal limitação está na dependência de condições técnicas externas, como a qualidade da câmera e a iluminação do ambiente, que podem comprometer o desempenho do rastreamento ocular. Além disso, a obtenção de uma base de dados confiável é um processo rigoroso, exigindo tempo e validação ética, o que pode retardar a evolução do sistema.
+
+As oportunidades demonstram um cenário favorável de aplicação prática e divulgação. Clínicas e instituições de saúde podem adotar o sistema como ferramenta de apoio diagnóstico, enquanto a originalidade da abordagem aumenta seu potencial de destaque em feiras de tecnologia e ambientes acadêmicos. Isso cria espaço para futuras parcerias e aprimoramentos.
 
 \begin{figure}[H]
 \centering
@@ -124,7 +128,7 @@
 \SourceOrNote{Do próprio autor (2025)}
 \end{figure}
 
-    Não deixe a seção terminar com a imagem então sempre adicione um texto após a mesma.
+    Por fim, os riscos estão ligados à competitividade do mercado e à necessidade de interpretação especializada dos resultados. Projetos semelhantes podem surgir em empresas com maior capacidade de investimento, e a dependência de especialistas pode limitar o uso autônomo do sistema.
 
 \end{document}
 
