--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -1,12 +1,10 @@
-A \textit{landing page} do projeto foi desenvolvida em \textit{HTML}, responsável pela estrutura do conteúdo, \textit{CSS}, utilizado para o estilo visual, e \textit{JavaScript}, empregado na implementação da interatividade e do dinamismo da navegação. O sistema de rastreamento ocular foi implementado em JavaScript, utilizando a biblioteca \textit{WebGazer.js}, que contém um modelo capaz de se autocalibrar ao observar a interação dos visitantes com a página, treinando um mapeamento entre as características do olhar e as posições na tela \cite{papoutsaki2016webgazer}. O tratamento das coordenadas oculares recebidas do \textit{frontend} foi realizado em JavaScript, com o uso do \textit{Node.js} e do \textit{Socket.IO}, possibilitando a comunicação em tempo real com o frontend, uma vez que depende das coordenadas enviadas por ele. Essa parte do \textit{backend} é responsável por analisar as métricas TDC (acertos e erros), dados que serão utilizados para compor o feedback individual de cada usuário. Por fim, o jogo \textit{web} foi desenvolvido em \textit{TypeScript}, utilizando o \textit{framework} \textit{Next.js}, o que proporcionou um código mais robusto, organizado e uma experiência de uso moderna e fluida.
+A \textit{landing page} do projeto foi desenvolvida em \textit{HTML}, responsável pela estrutura do conteúdo, \textit{CSS}, utilizado para o estilo visual, e \textit{JavaScript}, empregado na implementação da interatividade e do dinamismo da navegação. O sistema de rastreamento ocular foi implementado em JavaScript, utilizando a biblioteca \textit{WebGazer.js}, que contém um modelo capaz de se autocalibrar ao observar a interação dos visitantes com a página, treinando um mapeamento entre as características do olhar e as posições na tela \cite{papoutsaki2016webgazer}. O tratamento das coordenadas oculares recebidas do \textit{frontend} foi realizado em JavaScript, com o uso do \textit{Node.js} e do \textit{Socket.IO}, possibilitando a comunicação em tempo real com o frontend, uma vez que depende das coordenadas enviadas por ele. Essa parte do \textit{backend} é responsável por analisar as métricas TDC (acertos e erros), dados que serão utilizados para compor o feedback individual de cada usuário. No backend, a biblioteca serialport gerencia a comunicação serial pela porta COM \textit{(Windows)}, enviando comandos ao dispositivo IoT e recebendo eventos, integrados ao frontend em tempo real via Socket.IO. Por fim, o jogo \textit{web} foi desenvolvido em \textit{TypeScript}, utilizando o \textit{framework} \textit{Next.js}, o que proporcionou um código mais robusto, organizado e uma experiência de uso moderna e fluida.
 
 A metodologia fundamenta-se na aplicação adaptada do TDC. A principal diferença do presente trabalho está na integração do teste com o rastreamento ocular em tempo real, permitindo a coleta de dados visuais complementares durante a execução das tarefas.
 
-O experimento é estruturado como um jogo digital de temática espacial, composto por
-três fases com níveis crescentes de dificuldade. A mecânica de jogo foi desenhada para simular os
-princípios do TDC, promovendo a exposição contínua a estímulos visuais por períodos prolongados e exigindo respostas rápidas e consistentes por parte do participante. %Ao longo de cada fase, o sistema registra métricas relacionadas à atenção, como erros de omissão (quando o participante não responde a um estímulo-alvo), erros de comissão (quando não mantém foco por tempo suficiente no alvo), tempo de reação e variabilidade temporal das respostas. COLOCAR REF
+O experimento é estruturado como um jogo digital de temática espacial, composto por três fases com níveis crescentes de dificuldade. A mecânica de jogo foi desenhada para simular os princípios do TDC, promovendo a exposição contínua a estímulos visuais por períodos prolongados e exigindo respostas rápidas e consistentes por parte do participante. 
 
-Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca WebGazer.js para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Para garantir a precisão da predição do olhar, a WebGazer.js utiliza uma arquitetura que combina diferentes técnicas de Aprendizado de Máquina. Inicialmente, o TensorFlow FaceMesh é mobilizado para a detecção precisa e em tempo real da face e, especificamente, dos pontos de referência da região ocular. O modelo de predição propriamente dito é baseado na Regressão Ridge, que é uma variação da regressão linear. A principal função desta técnica é atuar como um mecanismo de regularização, que, simplificadamente, evita o superajustamento \textit{(overfitting)} do modelo. Isso significa que ela impede que o modelo fique muito focado nos dados de treinamento, o que faria com que ele errasse ao lidar com novos usuários. A Regressão Ridge faz isso "aliviando" a influência dos parâmetros de maior valor no aprendizado. O resultado é um modelo mais robusto e generalizável, capaz de realizar o mapeamento entre a imagem dos olhos e as coordenadas da tela de forma confiável para diferentes participantes. Finalmente, no pós-processamento, as predições de olhar bruto são submetidas ao Filtro de Kalman, um algoritmo recursivo que suaviza os dados, aumentando a fluidez e a estabilidade da predição ao estimar o próximo ponto de fixação com base na observação anterior \cite{WebGazerDoc}.É importante notar que todos os componentes algorítmicos, incluindo FaceMesh, Regressão Ridge e Filtro de Kalman, são nativos da biblioteca WebGazer.js e foram empregados em sua configuração padrão, sem modificações.
+Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca WebGazer.js para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Para garantir a precisão da predição do olhar, a WebGazer.js utiliza uma arquitetura que combina diferentes técnicas de Aprendizado de Máquina. Inicialmente, o TensorFlow FaceMesh é mobilizado para a detecção precisa e em tempo real da face e, especificamente, dos pontos de referência da região ocular. O modelo de predição propriamente dito é baseado na Regressão Ridge, que é uma variação da regressão linear. A principal função desta técnica é atuar como um mecanismo de regularização, que, simplificadamente, evita o superajustamento \textit{(overfitting)} do modelo. Isso significa que ela impede que o modelo fique muito focado nos dados de treinamento, o que faria com que ele errasse ao lidar com novos usuários. A Regressão Ridge faz isso aliviando a influência dos parâmetros de maior valor no aprendizado. O resultado é um modelo mais robusto e generalizável, capaz de realizar o mapeamento entre a imagem dos olhos e as coordenadas da tela de forma confiável para diferentes participantes. Finalmente, no pós-processamento, as predições de olhar bruto são submetidas ao Filtro de Kalman, um algoritmo recursivo que suaviza os dados, aumentando a fluidez e a estabilidade da predição ao estimar o próximo ponto de fixação com base na observação anterior \cite{WebGazerDoc}.É importante notar que todos os componentes algorítmicos, incluindo FaceMesh, Regressão Ridge e Filtro de Kalman, são nativos da biblioteca WebGazer.js e foram empregados em sua configuração padrão, sem modificações.
 
 Os dados de fixação visual coletados permitem identificar padrões de atenção ou desatenção, que são contrastados com nossa base de dados em cada etapa da atividade. Em paralelo à coleta desses dados, todas as fases do experimento são configuradas para potencializar a sobrecarga sensorial e dificultar a concentração do participante. Para tal, utilizam-se música de fundo — cuja intensidade e ritmo são ajustados conforme o nível de dificuldade — e a imposição de um tempo máximo definido, elementos que, em conjunto, intensificam o estresse cognitivo e a exigência da tarefa.
 
@@ -33,9 +31,7 @@ objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante 
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na segunda fase do experimento, o participante é instruído a manter o foco em cinco estrelas estáticas que brilham individualmente em sequência (o estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções e que, idealmente, devem ser ignorados. Ao término da exibição, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões IoT, quais planetas foram reconhecidos durante o trânsito.
-O objetivo central dessa etapa é mensurar a capacidade de inibição de respostas a estímulos irrelevantes. A expectativa é que indivíduos com padrão de atenção neurotípica mantenham o foco na tarefa principal das estrelas e, portanto, errem a identificação dos planetas (ou seja, não os reconheçam). Por outro lado, o acerto na identificação do planeta (o reconhecimento) é interpretado como um erro de inibição atencional — uma dificuldade de suprimir o estímulo secundário e irrelevante —, característica de perfis com potencial TDA.
-A trilha sonora, que se torna gradualmente mais intensa e acelerada, amplia a carga cognitiva e permite observar como múltiplos estímulos simultâneos afetam a manutenção da atenção.
+Na segunda fase, o participante deve manter o foco em cinco estrelas estáticas, que brilham individualmente em sequência (estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções. Ao término da exibição, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões IoT, quais planetas foram reconhecidos durante o trânsito. O reconhecimento correto de planetas efetivamente exibidos é contabilizado como acerto, enquanto a seleção de planetas não exibidos configura erro. Essa etapa avalia simultaneamente o desempenho na tarefa principal e a detecção incidental de estímulos periféricos. A interpretação do reconhecimento de estímulos secundários como indicador positivo ou negativo será definida após validação com grupos de referência (crianças com e sem TDAH), considerando duas hipóteses alternativas: (1) maior detecção incidental pode refletir dificuldade de inibição de distratores e associar-se ao TDA; (2) menor detecção, decorrente de foco mais exclusivo na tarefa principal, pode estar mais associada ao TDA. A trilha sonora, mais intensa e acelerada nesta fase, eleva a carga cognitiva e permite observar o impacto de múltiplos estímulos simultâneos na manutenção da atenção.
 
 Para a construção do dispositivo de controle da \textit{IoT}, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento Arduino, sete botões do tipo push-button, sete resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do Arduino, configuradas como entradas com resistores pull-down para garantir leituras estáveis. Dessa forma, ao término da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. O Arduino atua como uma interface de comunicação de hardware, detectando o pressionamento físico dos botões IoT. Por meio da comunicação serial, o microcontrolador transmite o evento acionado ao sistema. O servidor é responsável por receber e interpretar este sinal do botão selecionado e, na sequência, acionar a função que contabiliza os acertos e os erros de inibição do participante para a fase.
 
