atualiza registros no logbook e ajusta datas das atividades

--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -78,8 +78,9 @@ Vetorização da fase 2 do jogo                     & 16/09/2025 & 18/09/2025 & 
 Criação das personas                              & 18/09/2025 & 18/09/2025 & Amanda  & Criação de personas para guiar o desenvolvimento do projeto. \\ \hline
 Aplicação do vetor na fase 2 do jogo                  & 20/09/2025 & 20/09/2025 & Igor  & Aplicação dos vetores criados na fase 2 do jogo. \\ \hline
 Escrita e correção dos objetivos do artigo        & 06/10/2025 & 08/10/2025 & Giovana & Escrita e correção dos objetivos do artigo com base no feedback recebido. \\ \hline
-Escrita e correção das metodologias do artigo     & 06/10/2025 &            & Giovana & Escrita e correção das metodologias do artigo com base no feedback recebido. \\ \hline
+Escrita e correção das metodologias do artigo     & 06/10/2025 & 29/10/2025 & Giovana & Escrita e correção das metodologias do artigo com base no feedback recebido. \\ \hline
 Desenvolvimento do front-end da calibração        & 10/10/2025 & 10/10/2025 & Amanda  & Desenvolvimento do front-end da calibração. \\ \hline
+Desenvolvimento do IoT para coleta de dados         & 10/10/2025 &  & Igor  & Desenvolvimento do IoT para coleta de dados do jogo. \\ \hline
 Reunião de alinhamento                            & 16/10/2025  & 16/10/2025 & Todos   & Reunião para alinhamento das atividades e definição de próximos passos. \\ \hline
 Reunião com o orientador do artigo                & 16/10/2025  & 16/10/2025 & Todos   & Reunião com o orientador do artigo para discutir o progresso e receber feedback. \\ \hline
 Criação do sitemap & 17/10/2025 & 21/10/2025 & Diego   & Criação do sitemap para o projeto. \\ \hline
@@ -87,7 +88,7 @@ Desenvolvimento do front-end da fase 2 do jogo    & 18/10/2025  & 18/10/2025 & A
 Criação do design da fase 3 do jogo               & 19/10/2025  & 20/10/2025 & Amanda   & Criação do design da fase 3 do jogo. \\ \hline
 Correção da funcionalidade de configuração do volume & 19/10/2025  & 19/10/2025 & Amanda   & Correção da funcionalidade de configuração do volume no jogo. \\ \hline
 Adição de tutorial da fase                         & 19/10/2025  & 19/10/2025 & Amanda   & Adição de tutorial das fases do jogo. \\ \hline
-Implementação da biblioteca no projeto & 19/10/2025 & 19/10/2025 & Diego   & Implementação da biblioteca WebGazer.js no projeto. \\ \hline
+
 \end{tabular}
 \end{table}
 
@@ -98,8 +99,9 @@ Implementação da biblioteca no projeto & 19/10/2025 & 19/10/2025 & Diego   & I
 \begin{tabular}{|p{5cm}|l|l|l|p{8cm}|}
 \hline
 Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
+Implementação da biblioteca no projeto & 19/10/2025 & 19/10/2025 & Diego   & Implementação da biblioteca WebGazer.js no projeto. \\ \hline
 Alinhamento sobre o projeto                        & 20/10/2025  & 20/10/2025 & Todos   & Alinhamento sobre o projeto e definição de próximos passos. \\ \hline
-Documentação dos artefatos do projeto             & 20/10/2025  &            & Giovana   & Documentação dos artefatos do projeto para registro e referência futura. \\ \hline
+Documentação dos artefatos do projeto             & 20/10/2025  & 29/10/2025 & Giovana   & Documentação dos artefatos do projeto para registro e referência futura. \\ \hline
 Correções do artigo                                & 20/10/2025  & 20/10/2025 & Arthur   & Realização das correções do artigo com base no feedback recebido. \\ \hline
 Revisão do diagrama de redes                       & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do diagrama de redes para garantir precisão e clareza. \\ \hline
 Revisão do CANVAS                                 & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do CANVAS para assegurar que todos os aspectos do projeto estão cobertos. \\ \hline
@@ -109,15 +111,28 @@ Integração back e front-end                       & 20/10/2025  & 26/10/2025 &
 Introdução do artigo                               & 20/10/2025 & 25/10/2025 & Arthur   & Escrita da introdução do artigo. \\ \hline
 Edição do pitch do projeto                          & 20/10/2025 & 26/10/2025 & Igor   & Edição do pitch do projeto para apresentação. \\ \hline
 Correções da analise Swot                         & 23/10/2025 & 23/10/2025 & Igor   & Realização das correções da análise SWOT com base no feedback recebido. \\ \hline
+Criação do diagrama de casos de uso               & 23/10/2025 & 23/10/2025 & Arthur   & Criação do diagrama de casos de uso para o projeto. \\ \hline
 Revisão da metodologia                             & 25/10/2025 & 25/10/2025 & Arthur   & Revisão da metodologia do artigo. \\ \hline
 Ajuste da lógica da fase 1                         & 25/10/2025 & 25/10/2025 & Giovana   & Ajuste da lógica da fase 1 do jogo. \\ \hline
-Pesquisa de bibliotecas para animação & 25/10/2025 & 25/10/2025 & Igor   & Início da pesquisa de bibliotecas para animação dos elementos gráficos do jogo. \\ \hline
-Ajuste da lógica da fase 2                         & 26/10/2025 & 26/10/2025 & Giovana   & Ajuste da lógica da fase 2 do jogo. \\ \hline
-Ajustes das telas finais e de feedback no figma    & 26/10/2025 & 26/10/2025 & Amanda   & Ajustes das telas finais e de feedback no Figma. \\ \hline
-Inclusão de registros no template do Logbook & 26/10/2025 &       & Amanda   & Início da inclusão de registros no template do Logbook para documentar o progresso do projeto. \\ \hline
+
 \end{tabular}
 \end{table}
 
+\break
 
+ \begin{table}[]
+\centering
+\begin{tabular}{|p{5cm}|l|l|l|p{8cm}|}
+\hline
+Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
+Pesquisa de bibliotecas para animação & 25/10/2025 & 25/10/2025 & Igor   & Início da pesquisa de bibliotecas para animação dos elementos gráficos do jogo. \\ \hline
+Ajuste da lógica da fase 2                         & 26/10/2025 & 26/10/2025 & Giovana   & Ajuste da lógica da fase 2 do jogo. \\ \hline
+Ajustes das telas finais e de feedback no figma    & 26/10/2025 & 26/10/2025 & Amanda   & Ajustes das telas finais e de feedback no Figma. \\ \hline
+Inclusão de registros no template do Logbook & 26/10/2025 & 29/10/2025 & Amanda   & Início da inclusão de registros no template do Logbook para documentar o progresso do projeto. \\ \hline
+Criação de rota para conexão da fase 2 com IoT & 28/10/2025 & 28/10/2025 & Giovana   & Criação de rota para conexão da fase 2 do jogo com o IoT para coleta de dados. \\ \hline
+Ajustes no front-end da fase 2                        & 28/10/2025 & 29/10/2025 & Amanda   & Realização de ajustes no front-end da fase 2 do jogo para melhorar a experiência do usuário. \\ \hline
+Revisão dos slides da apresentação final              & 28/10/2025 & 29/10/2025 & Amanda   & Revisão dos slides da apresentação final para garantir clareza e impacto. \\ \hline
+\end{tabular}
+\end{table}
 
 \end{document}
