melhora a coesao da introducao e adiciona as metricas de atencao do TDC

--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -1,13 +1,4 @@
-A Organização das Nações Unidas (ONU) é uma instituição que visa estabelecer a paz,
-segurança e desenvolvimento global. A ONU conta com 193 países membros que formam a
-Assembleia Geral, responsável por desenvolver as políticas da organização. Em 2015, como
-parte da Agenda 2030 para o Desenvolvimento Sustentável, foram criados 17 objetivos que
-abrangem desde a melhoria da indústria até o aprimoramento da saúde da população. Esse
-conjunto de metas constitui um plano de ação ambicioso para as pessoas, o planeta e a
-prosperidade. Este trabalho visa contribuir para o terceiro objetivo, que busca garantir o
-acesso à saúde e promover o bem estar, ao desenvolver uma plataforma digital gamificada
-com o objetivo de auxiliar nos possíveis indícios do Transtorno de Déficit de Atenção (TDA)
-em adultos.
+A Organização das Nações Unidas (ONU) estabelece, por meio da Agenda 2030, metas para promover o desenvolvimento sustentável e o bem-estar global. Entre os 17 Objetivos de Desenvolvimento Sustentável (ODS), o terceiro busca garantir saúde de qualidade e promover o bem-estar para todos. Nesse contexto, este trabalho visa contribuir para essa meta ao propor uma solução tecnológica voltada à identificação de indícios do Transtorno de Déficit de Atenção (TDA) em adultos.\textcite{unitednations2015agenda2030}
 
 O TDA é uma condição neurobiológica de causas genéticas, que afeta milhões de pessoas em todo o mundo. É caracterizada por sintomas de
 desatenção, impulsividade, e, em alguns casos, hiperatividade, afetando significativamente o
@@ -29,10 +20,6 @@ da análise. Além disso, a comparação dos dados obtidos com padrões normativ
 identificar desvios significativos no desempenho visual atencional, muitas vezes
 imperceptíveis a métodos tradicionais.
 
-A Inteligência Artificial (IA), é um campo da computação dedicado à criação de sistemas capazes de replicar a habilidade humana de executar tarefas que requerem percepção, raciocinio, aprendizado e tomada de decisão. A IA pode ser dividida em IA Forte e IA Fraca, \textcite{sep-chinese-room} define a IA Forte como programas que conseguem, além de entender a linguagem natural, também conseguem ter todas as características de raciocinio de um humano. A IA Fraca seria capaz de somente replicar tarefas específicas, e não possuir capacidade de raciocínio. A capacidade da IA de realizar tarefas é obtida através de algoritmos de aprendizagem profunda, processamento de linguagem natural e análise de dados.
-
-O conceito de Internet das Coisas (do inglês, Internet of Things, ou IoT) vem da conexão de dispostivos fisícos (como sensores, dispositivos inteligêntes, eletrodomésticos, etc. ) à internet por meio de protocolos de comunicação, o que permite que os dados coletados sejam amplamente distribuídos e compartilhados de forma autônoma. A IoT integra computação em nuvem, comunicação de máquina e análise de dados para criar sistemas integrados e inteligentes. https://iot.ieee.org/
- 
 Quando aplicada em um teste diagnóstico, a técnica permite acompanhar com
 precisão os movimentos dos olhos de um indivíduo durante a realização de tarefas
 específicas, fornecendo dados objetivos e detalhados sobre onde, por quanto tempo e em
@@ -41,22 +28,20 @@ demonstram que pessoas com TDA apresentam menor tempo de fixação e padrão vis
 mais disperso ao realizarem testes de desempenho, sugerindo dificuldade em manter a
 atenção sustentada e filtragem de estímulos irrelevantes \textcite{Lim2024}.
 
+A Inteligência Artificial (IA) surge como um campo essencial nesse contexto, voltado à criação de sistemas capazes de simular aspectos da cognição humana, como percepção, raciocínio, aprendizado e tomada de decisão. Segundo \textcite{sep-chinese-room}, a IA pode ser dividida em dois tipos: IA Forte, capaz de compreender e raciocinar de forma semelhante aos humanos; e IA Fraca, restrita à execução de tarefas específicas sem capacidade de raciocínio autônomo. O avanço dessas tecnologias, apoiado por algoritmos de aprendizagem profunda, processamento de linguagem natural e análise de dados, tem permitido desenvolver sistemas cada vez mais precisos e adaptativos.
+
+Associada à IA, a Internet das Coisas (Internet of Things, IoT) amplia o potencial de integração tecnológica ao conectar dispositivos físicos, como sensores e equipamentos inteligentes, à internet. Essa interconexão possibilita a coleta, o compartilhamento e a análise de dados em tempo real, criando ecossistemas inteligentes baseados em computação em nuvem e comunicação entre máquinas. \textcite{IEEE}
+ 
 O Teste de Desempenho Contínuo (TDC) é uma medida padronizada amplamente
 utilizada na neuropsicologia para avaliar métricas de atenção sustentada, impulsividade,
 tempo de resposta e variabilidade dos tempos de reação. Trata-se de uma tarefa
 computadorizada na qual o usuário responde e reage a estímulos apresentados
-sequencialmente, permitindo medidas de desempenho atencional ao longo do tempo. Os
-\textit{serious games}, ou jogos sérios, são aplicações digitais desenvolvidas com finalidades que
-vão além do entretenimento, como educação, treinamento ou reabilitação cognitiva. No
-contexto ne análises neuropsicológicas, eles vêm sendo utilizados como ferramentas
-complementares aos testes tradicionais, oferecendo ambientes imersivos e interativos que
-auxiliam no engajamento do usuário e a mensuração de habilidades cognitivas.
+sequencialmente, permitindo medidas de desempenho atencional ao longo do tempo. 
+A atenção é um processo cognitivo complexo que envolve diferentes componentes inter-relacionados, essenciais para o desempenho em tarefas como o teste de desempenho contínuo. De forma geral, pode ser classificada em quatro tipos principais. A atenção sustentada refere-se à capacidade de manter o foco em um estímulo ou tarefa por um período prolongado, sendo fundamental para evitar erros de omissão no TDC. A atenção seletiva envolve a habilidade de concentrar-se em informações relevantes enquanto se ignora distrações, o que influencia diretamente a precisão das respostas. A atenção alternada diz respeito à flexibilidade cognitiva para mudar o foco entre diferentes estímulos ou tarefas, demonstrando controle executivo. Por fim, a atenção dividida representa a capacidade de processar simultaneamente múltiplas fontes de informação, exigindo coordenação eficiente de recursos cognitivos. A compreensão dessas modalidades permite interpretar de forma mais abrangente as métricas obtidas no TDC.\textcite{CULLUM1998303}
 
-Com isso, a aplicação do \textit{eye tracking} em algo como os jogos sérios, podem servir não
-apenas como ferramentas para complementar o diagnóstico clínico, mas também como um
-potencial instrumento de triagem inicial. A análise dos dados com IA pode indicar o grau de
+Os \textit{serious games} (jogos sérios) também vêm se destacando como ferramentas complementares em contextos de avaliação e reabilitação cognitiva. Esses jogos digitais, desenvolvidos com finalidades que vão além do entretenimento, oferecem ambientes interativos e imersivos que aumentam o engajamento do usuário e permitem mensurar habilidades cognitivas de forma dinâmica.
+
+Desta forma,a integração entre eye tracking, IA e jogos sérios representa uma abordagem promissora para a triagem e o apoio diagnóstico do TDA.
+A análise dos dados com IA pode indicar o grau de
 desatenção apresentado por um indivíduo em diferentes contextos e contribuir para decisões
-clínicas mais embasadas. Assim, propomos por meio deste estudo a criação de um software
-gamificado, que usa as informações obtidas pelo rastreamento ocular de possíveis afetados
-pelo TDA e as processa, usando as métricas do TDC para gerar um resultado médio do
-desempenho geral, fornecendo uma possível indicação para o transtorno.
+clínicas mais embasadas. Assim, este estudo propõe o desenvolvimento de um software gamificado que utilize informações de rastreamento ocular processadas com base nas métricas do TDC, a fim de gerar um indicador do desempenho atencional geral e oferecer uma possível estimativa preliminar para o Transtorno de Déficit de Atenção.
