--- a/f299-template-pi-paper/fatec-article.bib
+++ b/f299-template-pi-paper/fatec-article.bib
@@ -282,3 +282,34 @@
   url    = {https://deepwiki.com/brownhci/WebGazer/3.2-gaze-prediction},
   year   = {2024}, % Usando o ano atual como referência, visto que é uma documentação viva.
 }
+
+@misc{IEEE,
+  author = {{IEEE}},
+  url = {https://iot.ieee.org/definition.html},
+  title = {Towards a Definition of the Internet of Things (IoT)},
+  year = {2015},
+}
+
+@incollection{CULLUM1998303,
+title = {4.11 - Neuropsychological Assessment of Adults},
+editor = {Alan S. Bellack and Michel Hersen},
+booktitle = {Comprehensive Clinical Psychology},
+publisher = {Pergamon},
+address = {Oxford},
+pages = {303-347},
+year = {1998},
+isbn = {978-0-08-042707-2},
+doi = {https://doi.org/10.1016/B0080-4270(73)00227-3},
+url = {https://www.sciencedirect.com/science/article/pii/B0080427073002273},
+author = {C. Munro Cullum}
+}
+
+@misc{unitednations2015agenda2030,
+  author       = {United Nations},
+  title        = {Transforming our world: the 2030 Agenda for Sustainable Development},
+  year         = {2015},
+  institution  = {United Nations},
+  address      = {New York},
+  url          = {https://sdgs.un.org/sites/default/files/publications/21252030%20Agenda%20for%20Sustainable%20Development%20web.pdf},
+  note         = {Accessed: 2025-10-28}
+}
